<resources>
    <string name="app_name">OpenGit_Kotlin</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_search">Search</string>
    <string name="menu_setting">Setting</string>
    <string name="menu_about">About</string>
    <string name="menu_track">Track</string>
    <string name="menu_share">Share</string>
    <string name="menu_trend">Trend</string>

    <string name="label_splash">闪屏页</string>
    <string name="label_login">登录页</string>

    <string name="splash_text_app_name">OpenGit</string>

    <string name="login_text_tip_1">欢迎回来！</string>
    <string name="login_text_tip_2">请完成登录操作</string>
    <string name="login_text_is_exist_account">是否存在账号？</string>
    <string name="login_text_sign_up">注册</string>
    <string name="login_text_account_hint">Github账号</string>
    <string name="login_text_password_hint">Github密码</string>
    <string name="login_text_account_or_password_null">输入的账号或者密码不能为空</string>

    <string name="home_tab_0">主页</string>
    <string name="home_tab_1">项目</string>
    <string name="home_tab_2">动态</string>
    <string name="home_tab_3">问题</string>

    <string name="drawer_item_trend">趋势</string>
    <string name="drawer_item_track">足迹</string>
    <string name="drawer_item_setting">设置</string>
    <string name="drawer_item_about">关于</string>
    <string name="drawer_item_share">分享</string>
    <string name="drawer_item_logout">注销</string>

    <string name="search_edittext_hint">搜索你关心的内容</string>
    <string name="search_item_0">项目</string>
    <string name="search_item_1">用户</string>
    <string name="search_item_2">问题</string>
    <string name="search_text_is_not_null">搜索内容不能为空</string>

    <string name="about_text_version">Version %1$s</string>
    <string name="about_text_github">Github</string>
    <string name="about_text_author">作者</string>
    <string name="about_text_thanks">鸣谢</string>
    <string name="about_text_blog">博客</string>
    <string name="about_text_juejin">掘金</string>
    <string name="about_text_jianshu">简书</string>
    <string name="about_text_csdn">CSDN</string>

    <string name="thanks_text_github_api">Github API</string>

    <string name="share_text_download_tips">扫码此二维码，下载OpenGit_Kotlin</string>
</resources>
