<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/header_height"
            android:background="@color/black"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_header_left"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:drawableStart="@drawable/icon_white_back"
                android:gravity="center"
                android:paddingStart="24dp"
                android:paddingEnd="8dp"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_header_center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:textColor="@color/white"
                android:textSize="14sp"
                tools:text="title" />

            <TextView
                android:id="@+id/tv_header_right"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:gravity="center"
                android:paddingStart="8dp"
                android:paddingEnd="24dp"
                android:textSize="14sp"
                tools:text="right title" />
        </RelativeLayout>

        <TextView
            android:id="@+id/tv_author_github"
            android:layout_width="match_parent"
            android:layout_height="@dimen/header_height"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:drawableEnd="@drawable/icon_right_arrow"
            android:gravity="center_vertical"
            android:text="@string/about_text_github"
            android:textColor="@color/color_title"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_author_blog"
            android:layout_width="match_parent"
            android:layout_height="@dimen/header_height"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:drawableEnd="@drawable/icon_right_arrow"
            android:gravity="center_vertical"
            android:text="@string/about_text_blog"
            android:textColor="@color/color_title"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_author_juejin"
            android:layout_width="match_parent"
            android:layout_height="@dimen/header_height"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:drawableEnd="@drawable/icon_right_arrow"
            android:gravity="center_vertical"
            android:text="@string/about_text_juejin"
            android:textColor="@color/color_title"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_author_jianshu"
            android:layout_width="match_parent"
            android:layout_height="@dimen/header_height"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:drawableEnd="@drawable/icon_right_arrow"
            android:gravity="center_vertical"
            android:text="@string/about_text_jianshu"
            android:textColor="@color/color_title"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_author_csdn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/header_height"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:drawableEnd="@drawable/icon_right_arrow"
            android:gravity="center_vertical"
            android:text="@string/about_text_csdn"
            android:textColor="@color/color_title"
            android:textSize="16sp" />

    </LinearLayout>
</layout>