<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="model"
            type="com.yuzo.opengit.kotlin.ui.viewmodel.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipChildren="false"
        android:clipToPadding="false">

        <ImageView
            android:id="@+id/iv_login_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:contentDescription="@null"
            android:src="@drawable/icon_app_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_login_tip_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="30dp"
            android:text="@string/login_text_tip_1"
            android:textColor="@color/color_title"
            android:textSize="23sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_login_icon" />

        <TextView
            android:id="@+id/tv_login_tip_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="30dp"
            android:text="@string/login_text_tip_2"
            android:textColor="@color/color_title"
            android:textSize="23sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_login_tip_1" />

        <FrameLayout
            android:id="@+id/fl_input_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="40dp"
            android:background="@drawable/shape_login_card"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_login_tip_2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:padding="30dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hintTextAppearance="@style/LoginStyle">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/login_text_account_hint"
                        android:maxLines="1"
                        android:text="@{model.account}"
                        android:textColorHint="@android:color/darker_gray"
                        android:textCursorDrawable="@drawable/text_cursor_drawable"
                        android:textSize="14sp"
                        app:addTextChangedListener="@{model.accountWatcher}" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hintTextAppearance="@style/LoginStyle"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/login_text_password_hint"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:text="@{model.password}"
                        android:textColorHint="@android:color/darker_gray"
                        android:textCursorDrawable="@drawable/text_cursor_drawable"
                        android:textSize="14sp"
                        app:addTextChangedListener="@{model.passwordWatcher}" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <FrameLayout
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="bottom|end"
                android:layout_marginBottom="-10dp"
                android:background="@drawable/shape_login_btn"
                android:layout_marginEnd="-10dp"
                android:onClick="@{()->model.onLogin()}">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@null"
                    android:layout_gravity="center"
                    android:src="@drawable/icon_white_back" />

            </FrameLayout>
        </FrameLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fl_input_container">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:text="@string/login_text_is_exist_account"
                android:textColor="@color/color_title" />

            <TextView
                android:id="@+id/tv_login_sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_text_sign_up"
                android:textColor="@color/color_title"
                android:onClick="@{()->model.onSignUp()}"/>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
